# javapp

./: .gitignore  .gitmodules  Array.h  AutoCloseable.h  CMakeLists.txt  Comparable.h  Double.h  Enum.cpp  Enum.h  Iterable.cpp  Iterable.h  Long.cpp  Long.h  Object.cpp  Object.h  README.md  Runnable.cpp  String.cpp  String.h  Throwable.cpp  Throwable.h
impl_inner/: HashTableCommon.h  LeakTrace.cpp  SwissTableHashMap.cpp  SwissTableHashMap.h  SwissTableHashSet.cpp  SwissTableHashSet.h  UnmodifiableMap.cpp
java/io/: Serializable.h
java/util/: AbstractCollection.cpp  AbstractCollection.h  AbstractList.cpp  AbstractSequentialList.cpp  AbstractSequentialList.h  ArrayList.cpp  ArrayList.h  Collection.cpp  Collection.h  Comparator.cpp  Comparator.h  Deque.h  DoubleSummaryStatistics.cpp  HashSet.h  Iterator.h  LinkedList.cpp  LinkedList.h  List.cpp  List.h  Map.cpp  Map.h  Optional.h  RandomAccess.h  Spliterator.cpp
java/util/function/: BiConsumer.cpp  BiFunction.cpp  BiFunction.h  BiPredicate.cpp  BiPredicate.h  BinaryOperator.cpp  Consumer.cpp  Consumer.h  DoubleBinaryOperator.cpp  DoubleBinaryOperator.h  DoubleConsumer.cpp  DoubleConsumer.h  DoubleFunction.h  DoublePredicate.cpp  DoublePredicate.h  DoubleSupplier.h  DoubleToIntFunction.cpp  DoubleToLongFunction.h  DoubleUnaryOperator.cpp  DoubleUnaryOperator.h  Function.cpp  Function.h  IntConsumer.cpp  IntConsumer.h  IntPredicate.cpp  IntPredicate.h  LongConsumer.cpp  ObjDoubleConsumer.cpp  Predicate.cpp  Predicate.h  Supplier.cpp  Supplier.h  ToDoubleFunction.cpp  ToIntFunction.cpp  ToIntFunction.h  ToLongFunction.cpp  ToLongFunction.h  UnaryOperator.cpp  UnaryOperator.h
java/util/stream/: Collector.cpp  Collector.h  DoubleStream.cpp  DoubleStream.h  IntStream.h  Stream.cpp  Stream.h
src/: Array.h  Cloneable.h  Double.h  Enum.h  Integer.cpp  Integer.h  Iterable.cpp  Number.cpp  Number.h  Object.cpp  Object.h  Runnable.h  String.cpp  String.h  ThreadLocal.cpp  ThreadLocal.h
src/impl_inner/: AllocTrace.cpp  AllocTrace.h  HashTableCommon.h  LeakTrace.cpp  LeakTrace.h  SwissTableHashMap.h  SwissTableHashSet.cpp  SwissTableHashSet.h  UnmodifiableMap.cpp  UnmodifiableMap.h
src/impl_inner/streams/pipeline/: AbstractIntPipeline.cpp  AbstractIntPipeline.h  AbstractPipeline.cpp  AbstractPipeline.h  IntPipelineBoxer.cpp  IntPipelineBoxer.h  IntPipelineDistinctEntries.cpp  IntPipelineDistinctEntries.h  IntPipelineDropWhile.cpp  IntPipelineDropWhile.h  IntPipelineFilterEntries.cpp  IntPipelineFilterEntries.h  IntPipelineMapToObj.cpp  IntPipelineMapToObj.h  IntPipelinePeek.cpp  IntPipelinePeek.h  PipelineArrayListSource.cpp  PipelineArrayListSource.h  PipelineDistinctEntries.cpp  PipelineDistinctEntries.h  PipelineFilterEntries.cpp  PipelineFilterEntries.h  PipelineFlatMap.cpp  PipelineFlatMap.h  PipelineLimit.cpp  PipelineLimit.h  PipelineMap.cpp  PipelineMap.h  PipelinePeek.cpp  PipelinePeek.h  PipelineSkip.cpp  PipelineSkip.h  PipelineSpliteratorSource.cpp  PipelineSpliteratorSource.h  PipelineStreamAdaptor.cpp  PipelineStreamAdaptor.h
src/java/io/: Serializable.cpp
src/java/util/: AbstractCollection.cpp  AbstractList.cpp  AbstractList.h  AbstractSet.cpp  AbstractSet.h  ArrayList.cpp  ArrayList.h  Collection.h  DoubleSummaryStatistics.cpp  DoubleSummaryStatistics.h  HashSet.cpp  HashSet.h  IntSummaryStatistics.cpp  IntSummaryStatistics.h  Iterator.cpp  LinkedList.h  ListIterator.h  Objects.cpp  Objects.h  Optional.cpp  OptionalDouble.cpp  OptionalDouble.h  OptionalInt.cpp  OptionalInt.h  Queue.h  Set.cpp  Set.h  Spliterator.h  Spliterators.cpp  Spliterators.h
src/java/util/function/: BiConsumer.cpp  BiConsumer.h  BiPredicate.cpp  BinaryOperator.h  BooleanSupplier.cpp  BooleanSupplier.h  Consumer.cpp  Consumer.h  DoubleConsumer.cpp  DoubleFunction.cpp  DoublePredicate.h  DoubleSupplier.cpp  DoubleSupplier.h  DoubleToIntFunction.h  DoubleToLongFunction.cpp  DoubleUnaryOperator.cpp  Function.cpp  Function.h  IntBinaryOperator.cpp  IntBinaryOperator.h  IntConsumer.cpp  IntFunction.cpp  IntFunction.h  IntPredicate.cpp  IntPredicate.h  IntSupplier.cpp  IntSupplier.h  IntToDoubleFunction.cpp  IntToDoubleFunction.h  IntToLongFunction.cpp  IntToLongFunction.h  IntUnaryOperator.cpp  IntUnaryOperator.h  LongConsumer.cpp  LongConsumer.h  ObjDoubleConsumer.h  ObjIntConsumer.cpp  ObjIntConsumer.h  ToDoubleFunction.h
src/java/util/stream/: BaseStream.h  IntStream.cpp  IntStream.h  LongStream.cpp  LongStream.h  Stream.h
tests/: infra.cpp  infra.h  test.cpp
