cmake_minimum_required(VERSION 3.31)
project(javapp)

set(CMAKE_CXX_STANDARD 26)

find_package(Doxygen)
if(DOXYGEN_FOUND)
    doxygen_add_docs(docs ${CMAKE_SOURCE_DIR} ALL)
endif()

add_library(javapp STATIC
        Object.cpp
        Object.h
        jlang.h
        Throwable.cpp
        Throwable.h
        String.cpp
        String.h
        AutoCloseable.h
        java/util/function/Consumer.cpp
        java/util/function/Consumer.h
        java/util/Iterator.cpp
        java/util/Iterator.h
        Runnable.cpp
        Runnable.h
        java/util/stream/BaseStream.h
        java/util/Comparator.cpp
        java/util/Comparator.h
        java/util/Spliterator.cpp
        java/util/Spliterator.h
        java/util/function/IntPredicate.cpp
        java/util/function/IntPredicate.h
        java/util/function/Supplier.cpp
        java/util/function/Supplier.h
        java/util/function/DoubleConsumer.cpp
        java/util/function/DoubleConsumer.h
        java/util/function/DoubleSupplier.cpp
        java/util/function/DoubleSupplier.h
        java/util/function/DoublePredicate.cpp
        java/util/function/DoublePredicate.h
        java/util/DoubleSummaryStatistics.cpp
        java/util/DoubleSummaryStatistics.h
        Double.cpp
        Double.h
        Iterable.cpp
        Iterable.h
        Long.cpp
        Long.h
        java/util/Collection.cpp
        java/util/Collection.h
        java/util/stream/Stream.cpp
        java/util/stream/Stream.h
        java/util/function/Predicate.cpp
        java/util/function/Predicate.h
        java/util/Objects.cpp
        java/util/Objects.h
        Array.h
        java/util/function/IntFunction.cpp
        java/util/function/IntFunction.h
        java/util/Spliterators.cpp
        java/util/Spliterators.h
        java/util/ListIterator.h
        java/util/function/Function.cpp
        java/util/function/Function.h
        java/util/function/UnaryOperator.cpp
        java/util/function/UnaryOperator.h
        java/util/List.cpp
        java/util/List.h
        java/util/RandomAccess.h
        java/util/function/BiConsumer.cpp
        java/util/function/BiConsumer.h
        java/util/Set.cpp
        java/util/Set.h
        java/util/function/BinaryOperator.cpp
        java/util/function/BinaryOperator.h
        java/util/function/BiFunction.cpp
        java/util/function/BiFunction.h
        Enum.cpp
        Enum.h
        java/io/Serializable.cpp
        java/io/Serializable.h
        Comparable.h
        java/util/stream/Collector.cpp
        java/util/stream/Collector.h
        java/util/OptionalDouble.cpp
        java/util/OptionalDouble.h
        java/util/stream/DoubleStream.cpp
        java/util/stream/DoubleStream.h
        java/util/Optional.cpp
        java/util/Optional.h
        java/util/stream/IntStream.cpp
        java/util/stream/IntStream.h
        java/util/stream/LongStream.cpp
        java/util/stream/LongStream.h
        java/util/function/IntConsumer.cpp
        java/util/function/IntConsumer.h
        java/util/function/LongConsumer.cpp
        java/util/function/LongConsumer.h
        java/util/function/ToDoubleFunction.cpp
        java/util/function/ToDoubleFunction.h
        java/util/function/ToIntFunction.cpp
        java/util/function/ToIntFunction.h
        java/util/function/ToLongFunction.cpp
        java/util/function/ToLongFunction.h
        java/util/function/ObjDoubleConsumer.cpp
        java/util/function/ObjDoubleConsumer.h
)
target_include_directories(javapp PUBLIC ${CMAKE_SOURCE_DIR})