cmake_minimum_required(VERSION 3.31)
project(javapp)

set(CMAKE_CXX_STANDARD 26)

option(JAVAPP_ENABLE_LEAK_TRACING "Enable leak tracing for the java++ library, including projects built using it." OFF)
option(JAVAPP_ENABLE_LEAK_STACKTRACE "Enable leak tracing with stacktraces, this is quite expensive, best not to turn it on when not neccesary" OFF)

find_package(Doxygen)
if(DOXYGEN_FOUND)
    doxygen_add_docs(docs ${CMAKE_SOURCE_DIR} ALL)
endif()

if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    if(JAVAPP_ENABLE_LEAK_TRACING)
        add_compile_definitions(JAVAPP_TRACE_ALLOCS)
        if (JAVAPP_ENABLE_LEAK_STACKTRACE)
            add_compile_definitions(JAVAPP_TRACE_ALLOCS_STACKTRACE)
            set(CMAKE_ENABLE_EXPORTS TRUE)
            add_compile_options(-fno-omit-frame-pointer)
        endif()
    endif()
else()
    message("Leak Tracing is enabled, but is not supported on non linux systems (yet)!")
endif()

add_library(javapp STATIC
        Object.cpp
        Object.h
        jlang.h
        Throwable.cpp
        Throwable.h
        String.cpp
        String.h
        AutoCloseable.h
        java/util/function/Consumer.cpp
        java/util/function/Consumer.h
        java/util/Iterator.cpp
        java/util/Iterator.h
        Runnable.cpp
        Runnable.h
        java/util/stream/BaseStream.h
        java/util/Comparator.cpp
        java/util/Comparator.h
        java/util/Spliterator.cpp
        java/util/Spliterator.h
        java/util/function/IntPredicate.cpp
        java/util/function/IntPredicate.h
        java/util/function/Supplier.cpp
        java/util/function/Supplier.h
        java/util/function/DoubleConsumer.cpp
        java/util/function/DoubleConsumer.h
        java/util/function/DoubleSupplier.cpp
        java/util/function/DoubleSupplier.h
        java/util/function/DoublePredicate.cpp
        java/util/function/DoublePredicate.h
        java/util/DoubleSummaryStatistics.cpp
        java/util/DoubleSummaryStatistics.h
        Double.cpp
        Double.h
        Iterable.cpp
        Iterable.h
        Long.cpp
        Long.h
        java/util/Collection.cpp
        java/util/Collection.h
        java/util/stream/Stream.cpp
        java/util/stream/Stream.h
        java/util/function/Predicate.cpp
        java/util/function/Predicate.h
        java/util/Objects.cpp
        java/util/Objects.h
        Array.h
        java/util/function/IntFunction.cpp
        java/util/function/IntFunction.h
        java/util/Spliterators.cpp
        java/util/Spliterators.h
        java/util/ListIterator.h
        java/util/function/Function.cpp
        java/util/function/Function.h
        java/util/function/UnaryOperator.cpp
        java/util/function/UnaryOperator.h
        java/util/List.cpp
        java/util/List.h
        java/util/RandomAccess.h
        java/util/function/BiConsumer.cpp
        java/util/function/BiConsumer.h
        java/util/Set.cpp
        java/util/Set.h
        java/util/function/BinaryOperator.cpp
        java/util/function/BinaryOperator.h
        java/util/function/BiFunction.cpp
        java/util/function/BiFunction.h
        Enum.cpp
        Enum.h
        java/io/Serializable.cpp
        java/io/Serializable.h
        Comparable.h
        java/util/stream/Collector.cpp
        java/util/stream/Collector.h
        java/util/OptionalDouble.cpp
        java/util/OptionalDouble.h
        java/util/stream/DoubleStream.cpp
        java/util/stream/DoubleStream.h
        java/util/Optional.cpp
        java/util/Optional.h
        java/util/stream/IntStream.cpp
        java/util/stream/IntStream.h
        java/util/stream/LongStream.cpp
        java/util/stream/LongStream.h
        java/util/function/IntConsumer.cpp
        java/util/function/IntConsumer.h
        java/util/function/LongConsumer.cpp
        java/util/function/LongConsumer.h
        java/util/function/ToDoubleFunction.cpp
        java/util/function/ToDoubleFunction.h
        java/util/function/ToIntFunction.cpp
        java/util/function/ToIntFunction.h
        java/util/function/ToLongFunction.cpp
        java/util/function/ToLongFunction.h
        java/util/function/ObjDoubleConsumer.cpp
        java/util/function/ObjDoubleConsumer.h
        java/util/function/DoubleFunction.cpp
        java/util/function/DoubleFunction.h
        java/util/function/BiPredicate.cpp
        java/util/function/BiPredicate.h
        java/util/function/BooleanSupplier.cpp
        java/util/function/BooleanSupplier.h
        java/util/function/DoubleBinaryOperator.cpp
        java/util/function/DoubleBinaryOperator.h
        java/util/function/DoubleToIntFunction.cpp
        java/util/function/DoubleToIntFunction.h
        java/util/function/DoubleToLongFunction.cpp
        java/util/function/DoubleToLongFunction.h
        java/util/function/DoubleUnaryOperator.cpp
        java/util/function/DoubleUnaryOperator.h
        java/util/AbstractCollection.cpp
        java/util/AbstractCollection.h
        java/util/AbstractList.cpp
        java/util/AbstractList.h
        java/util/ArrayList.cpp
        java/util/ArrayList.h
        Cloneable.h
        java/util/AbstractSequentialList.cpp
        java/util/AbstractSequentialList.h
        java/util/Queue.h
        java/util/Deque.h
        java/util/LinkedList.cpp
        java/util/LinkedList.h
        java/util/AbstractSet.cpp
        java/util/AbstractSet.h
        java/util/Map.cpp
        java/util/Map.h
        impl_inner/UnmodifiableMap.cpp
        impl_inner/UnmodifiableMap.h
        impl_inner/SwissTableHashMap.cpp
        impl_inner/SwissTableHashMap.h
        impl_inner/LeakTrace.h
        impl_inner/LeakTrace.cpp
        impl_inner/SwissTableHashSet.cpp
        impl_inner/SwissTableHashSet.h
        impl_inner/HashTableCommon.h
        java/util/HashSet.cpp
        java/util/HashSet.h
        src/Object.cpp
        src/Object.h
        src/jlang.h
        src/Throwable.cpp
        src/Throwable.h
        src/String.cpp
        src/String.h
        src/AutoCloseable.h
        src/java/util/function/Consumer.cpp
        src/java/util/function/Consumer.h
        src/java/util/Iterator.cpp
        src/java/util/Iterator.h
        src/Runnable.cpp
        src/Runnable.h
        src/java/util/stream/BaseStream.h
        src/java/util/Comparator.cpp
        src/java/util/Comparator.h
        src/java/util/Spliterator.cpp
        src/java/util/Spliterator.h
        src/java/util/function/IntPredicate.cpp
        src/java/util/function/IntPredicate.h
        src/java/util/function/Supplier.cpp
        src/java/util/function/Supplier.h
        src/java/util/function/DoubleConsumer.cpp
        src/java/util/function/DoubleConsumer.h
        src/java/util/function/DoubleSupplier.cpp
        src/java/util/function/DoubleSupplier.h
        src/java/util/function/DoublePredicate.cpp
        src/java/util/function/DoublePredicate.h
        src/java/util/DoubleSummaryStatistics.cpp
        src/java/util/DoubleSummaryStatistics.h
        src/Double.cpp
        src/Double.h
        src/Iterable.cpp
        src/Iterable.h
        src/Long.cpp
        src/Long.h
        src/java/util/Collection.cpp
        src/java/util/Collection.h
        src/java/util/stream/Stream.cpp
        src/java/util/stream/Stream.h
        src/java/util/function/Predicate.cpp
        src/java/util/function/Predicate.h
        src/java/util/Objects.cpp
        src/java/util/Objects.h
        src/Array.h
        src/java/util/function/IntFunction.cpp
        src/java/util/function/IntFunction.h
        src/java/util/Spliterators.cpp
        src/java/util/Spliterators.h
        src/java/util/ListIterator.h
        src/java/util/function/Function.cpp
        src/java/util/function/Function.h
        src/java/util/function/UnaryOperator.cpp
        src/java/util/function/UnaryOperator.h
        src/java/util/List.cpp
        src/java/util/List.h
        src/java/util/RandomAccess.h
        src/java/util/function/BiConsumer.cpp
        src/java/util/function/BiConsumer.h
        src/java/util/Set.cpp
        src/java/util/Set.h
        src/java/util/function/BinaryOperator.cpp
        src/java/util/function/BinaryOperator.h
        src/java/util/function/BiFunction.cpp
        src/java/util/function/BiFunction.h
        src/Enum.cpp
        src/Enum.h
        src/java/io/Serializable.cpp
        src/java/io/Serializable.h
        src/Comparable.h
        src/java/util/stream/Collector.cpp
        src/java/util/stream/Collector.h
        src/java/util/OptionalDouble.cpp
        src/java/util/OptionalDouble.h
        src/java/util/stream/DoubleStream.cpp
        src/java/util/stream/DoubleStream.h
        src/java/util/Optional.cpp
        src/java/util/Optional.h
        src/java/util/stream/IntStream.cpp
        src/java/util/stream/IntStream.h
        src/java/util/stream/LongStream.cpp
        src/java/util/stream/LongStream.h
        src/java/util/function/IntConsumer.cpp
        src/java/util/function/IntConsumer.h
        src/java/util/function/LongConsumer.cpp
        src/java/util/function/LongConsumer.h
        src/java/util/function/ToDoubleFunction.cpp
        src/java/util/function/ToDoubleFunction.h
        src/java/util/function/ToIntFunction.cpp
        src/java/util/function/ToIntFunction.h
        src/java/util/function/ToLongFunction.cpp
        src/java/util/function/ToLongFunction.h
        src/java/util/function/ObjDoubleConsumer.cpp
        src/java/util/function/ObjDoubleConsumer.h
        src/java/util/function/DoubleFunction.cpp
        src/java/util/function/DoubleFunction.h
        src/java/util/function/BiPredicate.cpp
        src/java/util/function/BiPredicate.h
        src/java/util/function/BooleanSupplier.cpp
        src/java/util/function/BooleanSupplier.h
        src/java/util/function/DoubleBinaryOperator.cpp
        src/java/util/function/DoubleBinaryOperator.h
        src/java/util/function/DoubleToIntFunction.cpp
        src/java/util/function/DoubleToIntFunction.h
        src/java/util/function/DoubleToLongFunction.cpp
        src/java/util/function/DoubleToLongFunction.h
        src/java/util/function/DoubleUnaryOperator.cpp
        src/java/util/function/DoubleUnaryOperator.h
        src/java/util/AbstractCollection.cpp
        src/java/util/AbstractCollection.h
        src/java/util/AbstractList.cpp
        src/java/util/AbstractList.h
        src/java/util/ArrayList.cpp
        src/java/util/ArrayList.h
        src/Cloneable.h
        src/java/util/AbstractSequentialList.cpp
        src/java/util/AbstractSequentialList.h
        src/java/util/Queue.h
        src/java/util/Deque.h
        src/java/util/LinkedList.cpp
        src/java/util/LinkedList.h
        src/java/util/AbstractSet.cpp
        src/java/util/AbstractSet.h
        src/java/util/Map.cpp
        src/java/util/Map.h
        src/impl_inner/UnmodifiableMap.cpp
        src/impl_inner/UnmodifiableMap.h
        src/impl_inner/SwissTableHashMap.cpp
        src/impl_inner/SwissTableHashMap.h
        src/impl_inner/LeakTrace.h
        src/impl_inner/LeakTrace.cpp
        src/impl_inner/SwissTableHashSet.cpp
        src/impl_inner/SwissTableHashSet.h
        src/impl_inner/HashTableCommon.h
        src/java/util/HashSet.cpp
        src/java/util/HashSet.h
)
target_include_directories(javapp PUBLIC ${CMAKE_SOURCE_DIR})